--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Nick Strayer's CV"
-author: Nick Strayer
+title: "Hao Ye's CV"
+author: Hao Ye
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -9,9 +9,62 @@ output:
     self_contained: true
 ---
 
+```{css, echo=FALSE}
+body {
+  font-family: "Open Sans", "Helvetica", Helvetica, sans-serif;
+}
+
+.pagedjs_page:not(:first-of-type) {
+  --sidebar-width: 0rem;
+  --sidebar-background-color: #ffffff;
+  --main-width: calc(var(--content-width) - var(--sidebar-width));
+  --decorator-horizontal-margin: 0.2in;
+}
+
+#main {
+  font-size: 1.0rem;
+}
+
+#main.section.level1 {
+  font-size: 1.0rem;
+}
+
+#main.section.level2 {
+  font-size: 1.0rem;
+}
+
+.details h3{
+  font-size: 1.0rem;
+}
+
+.details .place{
+  font-size: 0.8rem;
+}
+
+.date{
+  font-size: 0.8rem;
+}
+
+h3 {
+  font-weight: 300;
+  font-size: 1.0rem;
+  font-family: "Open Sans", "Helvetica", Helvetica, sans-serif;
+}
+
+.fa {
+  top: 0.15rem;
+}
+
+.decorator {
+  top: 0.2rem;
+}
+
+```
+
+
 ```{r, include=FALSE}
 knitr::opts_chunk$set(
-  results='asis', 
+  results = 'asis', 
   echo = FALSE
 )
 
@@ -27,7 +80,7 @@ library(tidyverse)
 using_googlesheets <- TRUE
 
 # Just the copied URL from the sheet
-positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/14MQICF2F8-vf8CKPF1m4lyGKO6_thG-4aSwat1e2TWc"
+positions_sheet_loc <- "https://docs.google.com/spreadsheets/d/1I8rpPEUVUgMaEBUq-CjSRmoH9GqIbcjesFhRvxlK5Mc"
 
 # Is this sheet available for anyone to read? If you're using a private sheet
 # set this to false and go to gather_data.R and run the data loading manually
@@ -39,10 +92,8 @@ sheet_is_publicly_readable <- TRUE
 # document
 PDF_EXPORT <- FALSE
 
-
-CV_PDF_LOC <- "https://github.com/nstrayer/cv/raw/master/strayer_cv.pdf"
-CV_HTML_LOC <- "nickstrayer.me/cv/"
-
+CV_PDF_LOC <- "https://github.com/ha0ye/pagedown-test/raw/master/ye_cv.pdf"
+CV_HTML_LOC <- "ha0ye.github.io/pagedown-test/"
 
 # A global (gasp) variable that holds all the links that were inserted for
 # placement at the end
@@ -63,7 +114,7 @@ source('gather_data.R')
 
 ```{r}
 # When in export mode the little dots are unaligned, so fix that. 
-if(PDF_EXPORT){
+if (PDF_EXPORT) {
   cat("
   <style>
   :root{
@@ -78,11 +129,11 @@ Aside
 ================================================================================
 
 
-![logo](logo.png){width=100%}
+<!-- ![logo](logo.png){width=100%} -->
 
 ```{r}
 # When in export mode the little dots are unaligned, so fix that. 
-if(PDF_EXPORT){
+if(PDF_EXPORT) {
   glue("View this CV online with links at _{CV_HTML_LOC}_")
 } else {
   glue("[<i class='fas fa-download'></i> Download a PDF of this CV]({CV_PDF_LOC})")
@@ -92,12 +143,16 @@ if(PDF_EXPORT){
 Contact {#contact}
 --------------------------------------------------------------------------------
 
+Wildlife Ecology and Conservation<br />
+University of Florida<br />
+110 Newins-Ziegler Hall<br />
+PO Box 110430<br />
+Gainesville FL 32611-0430 USA
+
 ```{r}
 contact_info %>% 
   glue_data("- <i class='fa fa-{icon}'></i> {contact}")
 ```
-
-
 
 Language Skills {#skills}
 --------------------------------------------------------------------------------
@@ -107,23 +162,22 @@ build_skill_bars(skills)
 ```
 
 
-
 Disclaimer {#disclaimer}
 --------------------------------------------------------------------------------
 
 Made with the R package [**pagedown**](https://github.com/rstudio/pagedown). 
 
-The source code is available at [github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+The source code is available at [github.com/ha0ye/pagedown-test](https://github.com/ha0ye/pagedown-test), forked from
+[github.com/nstrayer/cv](https://github.com/nstrayer/cv).
 
 Last updated on `r Sys.Date()`.
-
-
 
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Hao Ye {#title}
 --------------------------------------------------------------------------------
+
 
 ```{r}
 print_text_block(text_blocks, 'intro')
@@ -131,13 +185,12 @@ print_text_block(text_blocks, 'intro')
 
 
 
-Education {data-icon=graduation-cap data-concise=true}
+Education {data-icon=university data-concise=true}
 --------------------------------------------------------------------------------
 
 ```{r}
 print_section(position_data, 'education')
 ```
-
 
 
 Research Experience {data-icon=laptop}
@@ -148,83 +201,48 @@ print_section(position_data, 'research_positions')
 ```
 
 
-
-Industry Experience {data-icon=suitcase}
+Publications, Posters, and Talks {data-icon=book .page-break-before}
 --------------------------------------------------------------------------------
 
-::: aside
 ```{r}
-print_text_block(text_blocks, 'industy_experience_aside')
-```
-:::
 
-```{r}
-print_section(position_data, 'industry_positions')
-```
+publications %>% 
+  arrange(desc(year)) %>% 
+  mutate_at("authors", ~gsub("Ye, H\\.", "**Ye, H\\.**", .)) %>%
+    glue_data(
+      "### {authors}",
+      ". ",
+      "{title}",
+      ". ",
+      "*{journal}*", 
+      " ",
+      "**{volume}**",
+      ": ",
+      "{pages}.", 
+      "\n\n", 
+      "N/A", 
+      "\n\n", 
+      "N/A", 
+      "\n\n", 
+      "{year}", 
+      "\n\n\n"
+    )
 
-<!-- These breaks just force a new page so section doesnt get cut off -->
-<br>
-<br>
-<br>
+#print_section(position_data, 'academic_articles')
+```
 
 Teaching Experience {data-icon=chalkboard-teacher}
 --------------------------------------------------------------------------------
 
-::: aside
-```{r}
-print_text_block(text_blocks, 'teaching_experience_aside')
-```
-:::
+<!-- ::: aside -->
+<!-- ```{r} -->
+<!-- print_text_block(text_blocks, 'teaching_experience_aside') -->
+<!-- ``` -->
+<!-- ::: -->
 
 ```{r}
 print_section(position_data, 'teaching_positions')
 ```
-
-
-
-Selected Data Science Writing {data-icon=chart-line}
---------------------------------------------------------------------------------
-
-::: aside
-```{r}
-print_text_block(text_blocks, 'data_science_writing_aside')
-```
-:::
-
-```{r}
-print_section(position_data, 'data_science_writings')
-```
-
-
-
-Selected Press (About)  {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'about_me_press')
-```
-
-
-<br>
-<br>
-
-
-Selected Press (By)  {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'by_me_press')
-```
-
-
-
-Selected Publications, Posters, and Talks {data-icon=book}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'academic_articles')
-```
-
 
 
 ```{r}
